syntax = "proto3";
package opennms.syslog.api;

option java_multiple_files = true;
option java_package = "org.opennms.horizon.syslog.api";

enum SyslogFacility {
  KERNEL = 0;
  USER  = 1;
  MAIL = 2 ;
  SYSTEM = 3;
  AUTH = 4;
  SYSLOG = 5;
  LPD = 6;
  NEWS = 7;
  UUCP = 8;
  CLOCK = 9;
  AUTHPRIV = 10;
  FTP = 11;
  NTP = 12 ;
  AUDIT = 13;
  ALERT = 14;
  CRON = 15;
  LOCAL0 = 16;
  LOCAL1 = 17;
  LOCAL2 = 18;
  LOCAL3 = 19;
  LOCAL4 = 20;
  LOCAL5 = 21;
  LOCAL6 = 22;
  LOCAL7 = 23;
  UNKNOWN = 99;
}
enum SyslogSeverity {
  EMERGENCY = 0;
  ALERTT = 1;
  CRITICAL = 2;
  ERROR = 3;
  WARNING = 4;
  NOTICE = 5;
  INFORMATIONAL = 6;
  DEBUG = 7;
  ALL = 8;
  UNKNOWNN =99;
}
message SyslogMessageDTO {
  SyslogFacility m_facility = 1;
  SyslogSeverity m_severity = 2;
  int32 m_version = 3 ;
  int64 m_date = 4;
  int32 m_year = 5;
  int32 m_month = 6;
  int32 m_dayOfMonth = 7;
  int32 m_hourOfDay = 8;
  int32 m_minute = 9;
  int32 m_second = 10;
  int32 m_millisecond = 11;
  string m_zoneId = 12 ;
  string m_hostname = 13;
  string m_processName = 14;
  string m_processId = 15;
  string m_messageId = 16;
  string m_message = 17;
  }
  message Configuration {
    string DEFAULT_PARSER = 1;
    string DEFAULT_DISCARD_UEI = 2;
    string m_listenAddress = 3;
    int32 m_syslogPort = 4;
    bool m_newSuspectOnMessage = 5 ;
    string m_forwardingRegexp = 6;
    int32 m_matchingGroupHost = 7;
    int32 m_matchingGroupMessage = 8;
    string m_parser = 9 ;
    string m_discardUei = 10;
    int32 m_threads = 11;
    int32 m_queueSize = 12 ;
    int32 m_batchSize = 13;
    int32 m_batchInterval = 14 ;
    int64 timeZone = 15;
    bool includeRawSyslogmessage = 16;
  }

  message UeiMatch {
    repeated string m_facilities = 1;
    repeated string m_severities = 2;
    ProcessMatch m_processMatch = 3;
    HostnameMatch m_hostnameMatch =4;
    HostaddrMatch m_hostaddrMatch = 5;
    Match m_match = 6;
    string m_uei = 7;
    repeated ParameterAssignment m_parameterAssignments = 8;
  }
message ProcessMatch {
 string m_expression = 1;
}
message HostnameMatch {
 string m_expression = 1;
}
message HostaddrMatch {
  string m_expression = 1;
}
message Match {
 string m_type = 1;
 string m_expression = 2;
 bool m_defaultParameterMapping = 3;
}
message ParameterAssignment {
  int32 m_matchingGroup = 1;
  string m_parameterName = 2;
}
message HideMatch {
  Match m_match = 1;
}

message SyslogdConfiguration {
  Configuration m_configuration = 1;
  repeated UeiMatch m_ueiMatches = 2;
  repeated HideMatch m_hideMatches = 3;
  repeated string m_importFiles = 4;
}

message SyslogMessageLogDTO {
  string source_address = 1 ;
  int32 source_port = 2;
  string system_id = 3;
  string location = 4;
  repeated SyslogMessageDTO messages = 5;
}
message SyslogConnection {
  int32 max_packet_size = 1 ;
  string source = 2 ;
  bytes buffer = 3;
}
