syntax = "proto3";
package opennms.sink.syslog;

option java_multiple_files = true;
option java_package = "org.opennms.horizon.grpc.syslog.contract";

import "opennms/syslog/syslog-api.proto";
import "opennms_minion_ipc.proto";

message TenantLocationSpecificSysLogDTO {
  string tenant_id = 100;
  string location_id = 101;

  minion.Identity identity = 1;
  string sysLogAddress = 2;
  repeated SyslogMessageDTO sysLogDTO = 3;
}
